@@ -1,182 +1,77 @@
-# KMS - Narcotics Court Verdicts
+# Your part: VIEW layer (GUI Designer)
 
-A Knowledge Management System for Indonesian narcotics court rulings, built in
-Java with a strict Model-View-Controller architecture. The app loads a dataset
-of criminal verdicts (Pid.Sus cases from district courts in East Java,
-2024-2025), lets you manage them through a console menu, and produces summary
-statistics over the whole knowledge base.
+You own everything the user sees: the console menus and tables, plus the
+JavaFX window (that one is a +5 bonus). Your files are in `files/`,
+already in the right folder structure.
 
-Final project for the Object-Oriented Programming course, even semester
-2025/2026.
+## Your files
 
-## Team
+```
+src/view/ConsoleView.java   menus, tables, prompts - contains NO business logic
+src/view/JavaFXView.java    the GUI window: table, dialogs, search bar
+run-gui.bat                 starts the GUI on Windows
+```
 
-| Name | NIM | Class | Role | Branch |
-|------|-----|-------|------|--------|
-| *(fill in)* | *(fill in)* | *(fill in)* | Knowledge/DB Engineer - Model layer | `feature/model` |
-| *(fill in)* | *(fill in)* | *(fill in)* | GUI Designer - View layer | `feature/view` |
-| *(fill in)* | *(fill in)* | *(fill in)* | Backend Developer - Controller layer | `feature/controller` |
+(The stylesheet `kms.css` belongs to Member A; your JavaFXView loads it
+at startup, and falls back to the default look when it's missing.)
 
-**Demo video:** *(YouTube link goes here)*
-
-## Features
-
-- **CRUD** - add, list, edit (sentence & fine) and delete verdicts
-- **Search** - by exact case number or by (partial) defendant name
-- **Filter** - by narcotic type, by court, or by sentence range in months
-- **Sort** - by sentence length (Comparable) or fine amount (Comparator), both directions
-- **Statistics** - totals, average sentence, average fine, most common narcotic, role distribution
-- **Export** - write the statistics report to `statistics_report.txt`
-- **Robust input** - every prompt survives wrong input; the app never crashes on bad data
-- **Dataset preload** - 55 verdicts load automatically from `data/verdicts.csv` at startup
-- **Two front-ends** - the required console menu (`app.Main`) and a bonus
-  JavaFX window (`app.MainFX`) with a sortable table, add/edit/delete dialogs
-  and the statistics report. Both drive the exact same controller.
-
-## Requirements
-
-- JDK 11 or newer (console version needs nothing else)
-- For the JavaFX GUI only: the [JavaFX SDK](https://gluonhq.com/products/javafx/)
-  unzipped into `lib/` so the jars sit at `lib/javafx-sdk-24.0.1/lib`
-  (any recent version works - adjust the folder name in the commands below)
-
-## Compile
-
-From the project root:
+## Setup (once)
 
 ```bash
-# Windows (PowerShell)
-javac --module-path "lib\javafx-sdk-24.0.1\lib" --add-modules javafx.controls -d out (Get-ChildItem -Recurse src -Filter *.java).FullName
-
-# Linux / macOS
-javac --module-path lib/javafx-sdk-24.0.1/lib --add-modules javafx.controls -d out $(find src -name "*.java")
+git clone <repo-url>
+cd <repo-folder>
+git config user.name  "Saladin"
+git config user.email "agamsaladin26@gmail.com"     # must match your GitHub account!
 ```
 
-Without the JavaFX SDK you can still compile everything except the GUI:
-exclude `JavaFXView.java` and `MainFX.java` and drop the module flags.
-
-## Run
+**Wait until Member A's model PR is merged into `develop`**, then:
 
 ```bash
-# console version (no JavaFX needed at runtime)
-java -cp out app.Main
-
-# GUI version
-java --module-path lib/javafx-sdk-24.0.1/lib --add-modules javafx.controls -cp out app.MainFX
+git checkout develop && git pull
+git checkout -b feature/view
 ```
 
-On Windows the two batch files `run-console.bat` and `run-gui.bat` do the
-same thing.
+## How to commit
 
-Run from the project root so the app can find `data/verdicts.csv`.
-If the file is missing the app still starts, just with an empty knowledge
-base - you can add verdicts through the menu.
+You have the finished files. To get 10+ real commits, add each file in
+stages: paste part of it, commit, paste more, commit.
 
-In IntelliJ IDEA: open the project, mark `src` as Sources Root, then run
-`app.Main` (or `app.MainFX` with the JavaFX VM options). Set the working
-directory to the project root in the run configuration.
+Commit in this order with these exact messages:
 
-## Architecture
+1. `docs: add console wireframe mockup to README` - the wireframe section in the project README
+2. `feat: add ConsoleView skeleton with main menu` - class + showMenu
+3. `feat: render verdict list as aligned table` - showVerdictList + the cut helper
+4. `feat: add detail view and message helpers` - showDetail, showMessage
+5. `feat: add statistics display` - showStatistics
+6. `feat: add interactive form for new verdicts` - readVerdictForm
+7. `feat: add input wrappers so controller never touches scanner` - askText/askInt/askDouble/askChoice
+8. `feat: add yes-no confirmation prompt` - confirm
+9. `feat: add JavaFX window with sortable verdict table` - JavaFXView.java: show(), buildTable, columns
+10. `feat: add search bar and toolbar actions to GUI` - buildToolbar, runSearch, refresh
+11. `feat: add add/edit/delete dialogs to GUI` - the three dialog methods
+12. `feat: add statistics dialog and export to GUI` - showStatistics, exportStatistics
+13. `feat: wire theme loading and severity badges into GUI` - buildHeader, styleDialog, categoryColumn (the kms.css file itself is Member A's commit)
+14. `fix: format fines with thousand separators in table` - the fineColumn cell factory
+15. `docs: document JavaFX setup and run commands` - run-gui.bat
 
-```
-        keyboard input                     formatted output
-             |                                    ^
-             v                                    |
-        +---------+   raw strings   +------------------+
-        |  VIEW   | --------------> |    CONTROLLER    |
-        | Console |                 |    Knowledge     |
-        |  View   | <-------------- |    Controller    |
-        +---------+   display data  +------------------+
-                                        |         ^
-                              validated |         | results
-                                calls   v         |
-                                    +------------------+
-                                    |      MODEL       |
-                                    | Verdict,         |
-                                    | KnowledgeRepo,   |
-                                    | VerdictStatistics|
-                                    +------------------+
-```
+Note: JavaFXView.java only compiles when the JavaFX SDK is in `lib/`
+(download link + instructions are in the project README). If you skip
+that locally, commits still work - CI compiles it for you.
 
-The view never touches the model. The controller validates everything coming
-from the view, calls the repository, and pushes results back for display.
+When done:
 
-### Package layout
-
-```
-src/
-├── model/
-│   ├── LegalDocument.java       abstract base (case number, court, date)
-│   ├── Verdict.java             main entity, extends LegalDocument,
-│   │                            implements Comparable<Verdict>
-│   ├── VerdictRepository.java   storage contract (interface)
-│   ├── KnowledgeRepository.java ArrayList-backed CRUD + search + sort
-│   └── VerdictStatistics.java   aggregate figures & report text
-├── view/
-│   ├── ConsoleView.java         menus, tables, prompts - no logic
-│   └── JavaFXView.java          bonus GUI window - same controller behind it
-├── controller/
-│   └── KnowledgeController.java orchestrates every menu action
-├── util/
-│   ├── InputHandler.java        validated console input (try-catch inside)
-│   └── CsvLoader.java           dataset import, skips broken rows
-└── app/
-    ├── Main.java                wiring + menu loop, nothing else
-    └── MainFX.java              GUI entry point (bonus)
+```bash
+git push -u origin feature/view
 ```
 
-### Where each OOP concept lives
+Then open a Pull Request `feature/view` → `develop` and ask a teammate
+to review it.
 
-| Concept | Location |
-|---------|----------|
-| Encapsulation | every field in `Verdict`/`LegalDocument` is private; setters validate |
-| Inheritance (`extends`) | `Verdict extends LegalDocument` |
-| Interface (`implements`) | `KnowledgeRepository implements VerdictRepository`; `Verdict implements Comparable<Verdict>` |
-| Overriding | `toString()`, `summary()`, `compareTo()` in `Verdict`; all repository methods |
-| Overloading | `Verdict.display()` / `Verdict.display(boolean)` |
-| Constructors | `Verdict()` no-arg and the full 12-argument version |
-| Static members | `Verdict.totalCreated` + `getTotalCreated()`; all of `InputHandler` |
-| ArrayList | `KnowledgeRepository`'s backing store |
-| Primitive arrays | parallel `int[]`/`String[]` counting in `VerdictStatistics` |
-| Exception handling | `InputHandler` retry loops, `CsvLoader` row skipping, setter validation caught in the controller |
+## Your video segment (3:45 - 4:45)
 
-## Console wireframe
-
-Sketched before implementation (View layer plan):
-
-```
-==========================================================
-   KNOWLEDGE MANAGEMENT SYSTEM - NARCOTICS COURT VERDICTS
-==========================================================
- 1. List all verdicts
- 2. Add a new verdict
- ...
- 0. Exit
-----------------------------------------------------------
-Choose an option: 1
-
-----------------------------------------------------------------
-No  Case Number               Defendant            Age Narcotic ...
-----------------------------------------------------------------
-1   2841/Pid.Sus/2024/PN Sby  Agus Prasetyo...     34  Crystal meth
-2   2856/Pid.Sus/2024/PN Sby  Rudi Hartono...      28  Crystal meth
-----------------------------------------------------------------
-Total: 55 verdict(s)
-```
-
-## Dataset
-
-`data/verdicts.csv` holds 55 verdicts, semicolon-separated (judge names
-contain commas). Columns: case number, court, verdict date, defendant name,
-age, narcotic type, evidence weight (g), violated article, defendant role,
-sentence (months), fine (Rp), presiding judge. Derived from public narcotics
-rulings (Pid.Sus) of East Java district courts, 2024-2025.
-
-## Git workflow
-
-- `main` - releasable code only, changes arrive via reviewed pull requests
-- `develop` - integration branch
-- `feature/model`, `feature/view`, `feature/controller` - one per member/layer
-- Commit format: `feat: ...`, `fix: ...`, `docs: ...`, `refactor: ...`
-- CI (GitHub Actions) compiles the project and boots the app on every push
-  to `develop` and every PR
+- State clearly: "the View never accesses the Model directly - it only
+  receives data that already came through the Controller"
+- Show the list of all 55 verdicts in the neat console table
+- Show the JavaFX window: sortable table, search, the add dialog
+  (mention this is the +5 bonus feature)
+- Demo the delete flow with its confirmation
